<resources>
    <string name="app_name">os-thm</string>
    <string name="mythemes">My Themes</string>
    <string name="dummytext">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum pretium. "</string>
    <string name="back_button">Back Button</string>
    <string name="create_theme">Create New</string>
    <string name="import_theme">Import Themes</string>
    <string name="help_button">Help Button</string>
    <string name="theme_editor">Theme Editor</string>
    <string name="info">Info</string>
    <string name="delete">Delete</string>
    <string name="export">Export</string>
    <string name="theme_information">Theme Information</string>
    <string name="edit">Edit</string>
    <string name="documentation">Documentation</string>
    <string name="clone">Clone</string>
    <string name="online">Online</string>
</resources>