<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ThemeEditorActivity">

    <LinearLayout
        android:id="@+id/linear_title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back_button"
            android:padding="6dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_arrow_back_white" />

        <TextView
            android:id="@+id/text_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/googlesans"
            android:padding="8dp"
            android:text="@string/theme_editor"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/image_save"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/help_button"
            android:padding="6dp"
            android:src="@drawable/ic_save_white" />

    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager_thmedit"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>