<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomsheet_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center_vertical"
        android:background="@drawable/round_top_bottomsheet"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/image_delete"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="6dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_delete_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#000000" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/googlesans"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:paddingRight="8dp"
            android:singleLine="true"
            android:text="Theme Name"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/text_subtitle"
            app:layout_constraintEnd_toStartOf="@id/image_edit"
            app:layout_constraintStart_toEndOf="@+id/image_delete"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:alpha="0.5"
            android:fontFamily="@font/googlesans"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp"
            android:text="Theme Author"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/text_title"
            app:layout_constraintStart_toStartOf="@id/text_title"
            app:layout_constraintTop_toBottomOf="@id/text_title" />

        <ImageView
            android:id="@+id/image_edit"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="6dp"
            android:src="@drawable/ic_edit_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_title"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#000000" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/bottomsheet_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingTop="6dp"
        android:paddingRight="8dp"
        android:paddingBottom="6dp">

        <LinearLayout
            android:id="@+id/linear_clone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/image_clone"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:padding="6dp"
                android:scaleType="centerInside"
                android:src="?attr/actionModeCopyDrawable"
                app:tint="#000000" />

            <TextView
                android:id="@+id/text_clone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/googlesans"
                android:padding="8dp"
                android:singleLine="true"
                android:text="@string/clone"
                android:textColor="#000000"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_export"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/image_export"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:padding="6dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_import_export_white"
                app:tint="#000000" />

            <TextView
                android:id="@+id/text_export"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/googlesans"
                android:padding="8dp"
                android:singleLine="true"
                android:text="@string/export"
                android:textColor="#000000"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/image_info"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:padding="6dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_info_white"
                app:tint="#000000" />

            <TextView
                android:id="@+id/text_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/googlesans"
                android:padding="8dp"
                android:singleLine="true"
                android:text="@string/info"
                android:textColor="#000000"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>